--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     "license": "BSD-3-Clause",
     "require": {
         "php": ">=5.5",
-		"psr/log" : "1.0.2",
+		"psr/log" : "~1.0",
 		"amphp/amp": "v1.2.2"
     },
     "autoload": {
